--- a/My_Blog/blog/templates/navbar.html
+++ b/My_Blog/blog/templates/navbar.html
@@ -1,7 +1,7 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home'%}">navbar</a>
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top .bg-info.bg-gradient">
+    <div class="container-fluid .bg-info.bg-gradient">
+        <a class="navbar-brand" href="{% url 'home'%}">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-SupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
