--- a/My_Blog/main/templates/details.html
+++ b/My_Blog/main/templates/details.html
@@ -16,6 +16,31 @@
                     </div>
                 </div>
             </div>
+
+            <div class="comment-section">
+                <div class="container">
+                    <h3 class="text-center">Comments</h3>
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="form-control">
+                            {{form.as_p}}
+                        </div>
+                        <div class="form-group">
+                            <button type="summit" class="btn btn-primary">Summit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <p class="mt-5">All Comments</p>
+            {% for comment in comments %}
+            <div class="all-comment">
+                <div class="container">
+                    <p><strong>{{comment.name}}</strong><small>{{comment.date}}</small></p>
+                    <p><small>{{comment.body}}</small></p>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </section>
 </div>
